crates/ruff_linter/src/rules/pycodestyle/snapshots/ruff_linter__rules__pycodestyle__tests__E402_E402.ipynb.snap
---
source: crates/ruff_linter/src/rules/pycodestyle/mod.rs
---
E402 Module level import not at top of cell
  --> E402.ipynb:9:1
 7 | os.path
 8 |
 9 | import pathlib
   | ^^^^^^^^^^^^^^
10 |
11 | import a

E402 Module level import not at top of cell
  --> E402.ipynb:22:1
   |
20 | __some__magic = 1
21 |
22 | import c
   | ^^^^^^^^
23 | import ok

E402 Module level import not at top of cell
  --> E402.ipynb:30:1
   |
30 | import no_ok
   | ^^^^^^^^^^^^
31 |
32 | %%time
