crates/ruff_linter/src/rules/pycodestyle/snapshots/ruff_linter__rules__pycodestyle__tests__E501_E501.py.snap
---
source: crates/ruff_linter/src/rules/pycodestyle/mod.rs
---
E501 Line too long (123 > 88)
 --> E501.py:5:89
  |
3 |     https://github.com/PyCQA/pycodestyle/pull/258/files#diff-841c622497a8033d10152bfdfb15b20b92437ecdea21a260944ea86b77b51533
4 |
5 | Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
  |                                                                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
6 | """

E501 Line too long (95 > 88)
  --> E501.py:16:85
15 | _ = "---------------------------------------------------------------------------AAAAAAA"
16 | _ = "---------------------------------------------------------------------------亜亜亜亜亜亜亜"
   |                                                                                         ^^^^^^^

E501 Line too long (127 > 88)
  --> E501.py:25:89
   |
23 | caller(
24 |     """
25 |     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
   |                                                                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
26 |     """,
27 | )

E501 Line too long (132 > 88)
  --> E501.py:40:89
   |
38 |     "Lorem ipsum dolor": "sit amet",
39 |     # E501 Line too long
40 |     "Lorem ipsum dolor": "sit amet consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.",
   |                                                                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
41 |     # E501 Line too long
42 |     "Lorem ipsum dolor": """

E501 Line too long (105 > 88)
  --> E501.py:43:89
   |
41 |     # E501 Line too long
42 |     "Lorem ipsum dolor": """
43 | sit amet  consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
   |                                                                                         ^^^^^^^^^^^^^^^^^
44 | """,
45 |     # OK

E501 Line too long (147 > 88)
  --> E501.py:83:89
   |
81 | …
82 | …
83 | …ned URL and, therefore, could easily be broken across multiple lines ([source](https://ruff.rs))
   |                                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
84 | …
